--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="sport-icon" data-sport="tennis">
                     <img src="tennis-icon.png" alt="Tennis Icon">
                 </div>
-                <div class="sport-icon" data-sport="pingpong">
+                <!--<div class="sport-icon" data-sport="pingpong">
                     <img src="pingpong-icon.png" alt="Ping Pong Icon">
-                </div>
+                </div>-->
                 <div class="sport-icon" data-sport="boules">
                     <img src="boules.png" alt="boules Icon">
                 </div>
@@ -45,6 +45,15 @@
                 </div>
                 <div class="sport-icon" data-sport="beachvolleyball">
                     <img src="beachvolleyball.png" alt="beachvolleyball Icon">
+                </div>
+                <div class="sport-icon" data-sport="team_handball">
+                    <img src="team_handball.png" alt="team_handball">
+                </div>
+                <div class="sport-icon" data-sport="equestrian">
+                    <img src="equestrian.png" alt="equestrian">
+                </div>
+                <div class="sport-icon" data-sport="paintball">
+                    <img src="paintball.png" alt="paintball">
                 </div>
             </div>
         </div>
