--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <a href="#">Contact</a>
         </nav>
         <div class="social-icons">
-            <img src="facebook-icon.png" alt="Facebook">
-            <img src="twitter-icon.png" alt="Twitter">
-            <img src="instagram-icon.png" alt="Instagram">
+            <a href="https://www.facebook.com/"><img src="facebook-icon.png"></a>
+            <a href="x.com"><img src="twitter-icon.png"></a>
+            <a href="instagram.com"><img src="instagram-icon.png"></a>
         </div>
     </footer>
 
