--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </nav>
         <div class="social-icons">
             <a href="https://www.facebook.com/"><img src="facebook-icon.png"></a>
-            <a href="x.com"><img src="twitter-icon.png"></a>
-            <a href="instagram.com"><img src="instagram-icon.png"></a>
+            <a href="https://x.com/home"><img src="twitter-icon.png"></a>
+            <a href="https://www.instagram.com/"><img src="instagram-icon.png"></a>
         </div>
     </footer>
 
