--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="sport-icon" data-sport="tennis">
                     <img src="tennis-icon.png" alt="Tennis Icon">
                 </div>
-                <!--<div class="sport-icon" data-sport="pingpong">
-                    <img src="pingpong-icon.png" alt="Ping Pong Icon">
-                </div>-->
+                <div class="sport-icon" data-sport="table_tennis">
+                    <img src="table_tennis.png" alt="table_tennis Icon">
+                </div>
                 <div class="sport-icon" data-sport="boules">
                     <img src="boules.png" alt="boules Icon">
                 </div>
