--- a/index.html
+++ b/index.html
@@ -23,37 +23,37 @@
         <div class="sidebar">
             <div class="sport-icons">
                 <div class="sport-icon" data-sport="soccer">
-                    <img src="football-icon.png" alt="Football Icon">
+                    <img src="icons/football-icon.png" alt="Football Icon">
                 </div>
                 <div class="sport-icon" data-sport="tennis">
-                    <img src="tennis-icon.png" alt="Tennis Icon">
+                    <img src="icons/tennis-icon.png" alt="Tennis Icon">
                 </div>
                 <div class="sport-icon" data-sport="table_tennis">
-                    <img src="table_tennis.png" alt="table_tennis Icon">
+                    <img src="icons/table_tennis.png" alt="table_tennis Icon">
                 </div>
                 <div class="sport-icon" data-sport="boules">
-                    <img src="boules.png" alt="boules Icon">
+                    <img src="icons/boules.png" alt="boules Icon">
                 </div>
                 <div class="sport-icon" data-sport="speckbrett">
-                    <img src="speckbrett.png" alt="speckbrett Icon">
+                    <img src="icons/speckbrett.png" alt="speckbrett Icon">
                 </div>
                 <div class="sport-icon" data-sport="skateboard">
-                    <img src="skateboard.png" alt="skateboard Icon">
+                    <img src="icons/skateboard.png" alt="skateboard Icon">
                 </div>
                 <div class="sport-icon" data-sport="basketball">
-                    <img src="basketball.png" alt="basketball Icon">
+                    <img src="icons/basketball.png" alt="basketball Icon">
                 </div>
                 <div class="sport-icon" data-sport="beachvolleyball">
-                    <img src="beachvolleyball.png" alt="beachvolleyball Icon">
+                    <img src="icons/beachvolleyball.png" alt="beachvolleyball Icon">
                 </div>
                 <div class="sport-icon" data-sport="team_handball">
-                    <img src="team_handball.png" alt="team_handball">
+                    <img src="icons/team_handball.png" alt="team_handball">
                 </div>
                 <div class="sport-icon" data-sport="equestrian">
-                    <img src="equestrian.png" alt="equestrian">
+                    <img src="icons/equestrian.png" alt="equestrian">
                 </div>
                 <div class="sport-icon" data-sport="paintball">
-                    <img src="paintball.png" alt="paintball">
+                    <img src="icons/paintball.png" alt="paintball">
                 </div>
             </div>
         </div>
