--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <a href="#">Contact</a>
         </nav>
         <div class="social-icons">
-            <a href="https://www.facebook.com/"><img src="facebook-icon.png"></a>
-            <a href="https://x.com/home"><img src="twitter-icon.png"></a>
-            <a href="https://www.instagram.com/"><img src="instagram-icon.png"></a>
+            <a href="https://www.facebook.com/"><img src="icons/facebook-icon.png"></a>
+            <a href="https://x.com/home"><img src="icons/twitter-icon.png"></a>
+            <a href="https://www.instagram.com/"><img src="icons/instagram-icon.png"></a>
         </div>
     </footer>
 
