--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="text" placeholder="Search for sports venues...">
         </div>
         <div class="weather-widget">
-            <img src="weather-icon.png" alt="Weather Icon">
+            <img src="icons/weather-icon.png" alt="Weather Icon">
             <span>10°C</span>
         </div>
     </header>
