--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EYX0C183ND"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EYX0C183ND');
+</script>
 <body>
     <header>
         
@@ -15,13 +24,23 @@
         <div class="search-bar">
             <input type="text" placeholder="Search for sports venues...">
         </div>
+        <div class="zoom">Zoom lock</div>
         
         <div class="weather-widget">
             <img src="icons/weather-icon.png" alt="Weather Icon">
             <span>10°C</span>
         </div>
     </header>
-
+    <input id="zoom-lock" type="checkbox"/>
+    <label class="btn-lock" for="zoom-lock">
+      <svg width="36" height="40" viewBox="0 0 36 40">
+        <path class="lockb" d="M27 27C27 34.1797 21.1797 40 14 40C6.8203 40 1 34.1797 1 27C1 19.8203 6.8203 14 14 14C21.1797 14 27 19.8203 27 27ZM15.6298 26.5191C16.4544 25.9845 17 25.056 17 24C17 22.3431 15.6569 21 14 21C12.3431 21 11 22.3431 11 24C11 25.056 11.5456 25.9845 12.3702 26.5191L11 32H17L15.6298 26.5191Z"></path>
+        <path class="lock" d="M6 21V10C6 5.58172 9.58172 2 14 2V2C18.4183 2 22 5.58172 22 10V21"></path>
+        <path class="bling" d="M29 20L31 22"></path>
+        <path class="bling" d="M31.5 15H34.5"></path>
+        <path class="bling" d="M29 10L31 8"></path>
+      </svg>
+    </label>
     <div class="container">
         <div class="sidebar">
             <div class="sport-icons">
