--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <input type="text" placeholder="Search for sports venues..." />
       </div>
       <div>
-        <button onclick="showAuthPopup('login')" class="button-3" >LogIn</button>
-        <button onclick="showAuthPopup('signup')" class="button-3">SignIn</button>
+        <!-- <button onclick="showAuthPopup('login')" class="button-3" >LogIn</button>
+        <button onclick="showAuthPopup('signup')" class="button-3">SignIn</button> -->
       </div>
 
       <!-- Enhanced Toggle Button -->
@@ -53,34 +53,11 @@
           <h2>Local Sports Events</h2>
           <p>Upcoming activities in your area</p>
         </div>
-
-        <div class="event-card">
-          <div class="event-date">Saturday, March 16 • 3:00 PM</div>
-          <h3 class="event-title">Community Soccer Finals</h3>
-          <div class="event-location">Central Park Stadium</div>
-          <span class="event-sport soccer">Soccer</span>
+      
+        <div id="eventsContainer">
+          <!-- Dynamic event cards will be inserted here -->
         </div>
-
-        <div class="event-card">
-          <div class="event-date">Sunday, March 17 • 10:00 AM</div>
-          <h3 class="event-title">Beach Volleyball Open</h3>
-          <div class="event-location">Southside Beach Courts</div>
-          <span class="event-sport basketball">Volleyball</span>
-        </div>
-
-        <div class="event-card">
-          <div class="event-date">Monday, March 18 • 6:30 PM</div>
-          <h3 class="event-title">Night Run Challenge</h3>
-          <div class="event-location">Riverside Trail Track</div>
-          <span class="event-sport running">Running</span>
-        </div>
-
-        <div class="event-card">
-          <div class="event-date">Wednesday, March 20 • 5:00 PM</div>
-          <h3 class="event-title">Youth Tennis Clinic</h3>
-          <div class="event-location">City Tennis Complex</div>
-          <span class="event-sport tennis">Tennis</span>
-        </div>
+      
         <button class="add-event-btn" onclick="showAddEventForm()">
           Add Event
         </button>
@@ -228,6 +205,7 @@
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
+    <script src="event.js" type="module"></script>
     <script src="popup.js"></script>
     <script src="auth.js"></script>
     <script>
